--- a/app/assets/stylesheets/sidenav.css
+++ b/app/assets/stylesheets/sidenav.css
@@ -98,7 +98,7 @@
   }
 
   @media screen and (max-width: 1200px) {
-    
+    .sidenav{left: -25%;}
     .openSidenav{
       display: flex;
       
